--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello World</title>
-  <style>
-    body {
-      background-color: #f0f4f8;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
-    }
-
-    h1 {
-      color: #333;
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      color: #666;
-      font-size: 20px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bootstrap Custom Purple & Teal Theme</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./css/style.css" />
+ 
 </head>
-<body>
-  <h1>Hello, World!</h1>
-  <p>Welcome to your first HTML & CSS page. this is siva wait for updates this is new</p>
+<body id="bg-noise">
+  <div class="d-flex justify-content-end mb-4">
+    <button id="toggleTheme" class="btn btn-outline-secondary">Toggle Theme</button>
+  </div>
+  <div class="container py-5">
+    <h1 class="mb-4">Bootstrap Custom Purple & Teal Theme</h1>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
