--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <!-- Featured Projects -->
   <section id="case-studies" class="py-5 ">
     <div class="container">
-      <div class="row rects">
+      <div class="row rects projects-header">
         <span class="rect tr"></span>
         <span class="rect tl"></span>
         <span class="rect br"></span>
