Casestudies included pending tyrememarket and Pentaur

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -208,9 +208,9 @@
             <span class="rect bl"></span>
               <img src="https://placehold.co/600x400" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Project Title</h4>
-                <p class="card-text">Brief description of the project or content. Keep it short and clear.</p>
-                <a href="case-study.html" class="btn btn-link">View more</a>
+                <h4 class="card-title pb-2">Jedi Dashboard </h4>
+                <p class="card-text"> Increasing Ops Efficiency through Product & Automation</p>
+                <a href="jedi.html" class="btn btn-link">View more</a>
               </div>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
@@ -220,9 +220,9 @@
             <span class="rect bl"></span>
               <img src="https://placehold.co/600x400" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Project Title</h4>
-                <p >Brief description of the project or content. Keep it short and clear.</p>
-                <a href="case-study.html" class="btn btn-link">View more</a>
+                <h4 class="card-title pb-2">Olympus LMS Enhancement</h4>
+                <p>Empowering Dreams, Accelerating Careers, and Cultivating Lifelong Learning Adventures!</p>
+                <a href="olympus.html" class="btn btn-link">View more</a>
               </div>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
@@ -232,9 +232,9 @@
             <span class="rect bl"></span>
               <img src="https://placehold.co/600x400" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Project Title</h4>
-                <p class="card-text">Brief description of the project or content. Keep it short and clear.</p>
-                <a href="case-study.html" class="btn btn-link">View more</a>
+                <h4 class="card-title pb-2">GL Shine</h4>
+                <p class="card-text">Unifying Sales Efficiency and Compliance for Optimal Performance</p>
+                <a href="shine.html" class="btn btn-link">View more</a>
               </div>
           </div>
           
