--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <span class="rect bl"></span>
               <img src="img/jedi.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Jedi Dashboard </h4>
+                <h4 class="card-title pb-2 fw-semibold">Jedi Dashboard </h4>
                 <p class="card-text"> Increasing Ops Efficiency through Product & Automation</p>
                 <a href="jedi.html" class="btn btn-link">View more</a>
               </div>
@@ -223,7 +223,7 @@
             <span class="rect bl"></span>
             <img src="img/olympus.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Olympus LMS Enhancement</h4>
+                <h4 class="card-title pb-2 fw-semibold">Olympus LMS Enhancement</h4>
                 <p>Empowering Dreams, Accelerating Careers, and Cultivating Lifelong Learning Adventures!</p>
                 <a href="olympus.html" class="btn btn-link">View more</a>
               </div>
@@ -235,7 +235,7 @@
             <span class="rect bl"></span>
             <img src="img/shine.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">GL Shine</h4>
+                <h4 class="card-title pb-2 fw-semibold">GL Shine</h4>
                 <p class="card-text">Unifying Sales Efficiency and Compliance for Optimal Performance</p>
                 <a href="shine.html" class="btn btn-link">View more</a>
               </div>
@@ -247,7 +247,7 @@
             <span class="rect bl"></span>
             <img src="img/tyre.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Tyremarket</h4>
+                <h4 class="card-title pb-2 fw-semibold">Tyremarket</h4>
                 <p class="card-text">Experiemntal attempt to bring offline experience to online</p>
                 <a href="tyre.html" class="btn btn-link">View more</a>
               </div>
@@ -259,9 +259,22 @@
             <span class="rect bl"></span>
             <img src="img/nurture.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2">Nurture Co</h4>
+                <h4 class="card-title pb-2 fw-semibold">Nurture Co</h4>
                 <p class="card-text">App for care takes and Givers</p>
                 <a href="nurture.html" class="btn btn-link">View more</a>
+              </div>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
+            <span class="rect tr"></span>
+            <span class="rect tl"></span>
+            <span class="rect br"></span>
+            <span class="rect bl"></span>
+            <img src="img/cv.png" class="card-img-top mb-3" alt="...">
+              <div class="card-body">
+                <h4 class="card-title pb-2 fw-semibold">AI Enbled CV Review</h4>
+                <p class="card-text">Resume Review Experience for Great Learning Career Services</p>
+                <a href="cvreview.html" class="btn btn-link">View more</a>
               </div>
           </div>
 
