--- a/index.html
+++ b/index.html
@@ -291,6 +291,18 @@
                 <a href="visa.html" class="btn btn-link">View more</a>
               </div>
           </div>
+          <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
+            <span class="rect tr"></span>
+            <span class="rect tl"></span>
+            <span class="rect br"></span>
+            <span class="rect bl"></span>
+            <img src="img/gla.png" class="card-img-top mb-3" alt="...">
+              <div class="card-body">
+                <h4 class="card-title pb-2 fw-semibold">Great Learning Academy's Mobile App</h4>
+                <p class="card-text">Bridging Dreams to Careers</p>
+                <a href="gla.html" class="btn btn-link">View more</a>
+              </div>
+          </div>
 
           
         </div>
