--- a/visa.html
+++ b/visa.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="favicon.svg" type="image/x-icon">
-  <title>GLAIDE - B Sivarami Reddy – Product Designer & Design Leader</title>
+  <title>Visa Portal - B Sivarami Reddy – Product Designer & Design Leader</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -78,7 +78,7 @@
   <!-- Hero Section -->
   <section class="hero-wrapper hero d-flex align-items-center justify-content-center text-center py-5">
     <div class="container py-5">
-      <h1 class="display-1 fw-bold">Visa Application – For document accuracy, and real-time visibility</h1>
+      <h1 class="display-1 fw-bold">Visa +I20 Application – For document accuracy, and real-time visibility</h1>
     </div>
   </section>
 
