--- a/index.html
+++ b/index.html
@@ -198,60 +198,70 @@
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
+            <a class="card-link" href="jedi.html">
               <img src="img/jedi.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Jedi Dashboard </h4>
                 <p class="card-text"> Increasing Ops Efficiency through Product & Automation</p>
                 <a href="jedi.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
             <span class="rect tr"></span>
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/olympus.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="olympus.html">
+              <img src="img/olympus.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Olympus LMS Enhancement</h4>
                 <p>Empowering Dreams, Accelerating Careers, and Cultivating Lifelong Learning Adventures!</p>
                 <a href="olympus.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
             <span class="rect tr"></span>
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/shine.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="shine.html">
+              <img src="img/shine.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">GL Shine</h4>
                 <p class="card-text">Unifying Sales Efficiency and Compliance for Optimal Performance</p>
                 <a href="shine.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
             <span class="rect tr"></span>
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/tyre.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="tyre.html">
+              <img src="img/tyre.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Tyremarket</h4>
                 <p class="card-text">Experiemntal attempt to bring offline experience to online</p>
                 <a href="tyre.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
             <span class="rect tr"></span>
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/nurture.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="nurture.html">
+              <img src="img/nurture.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Nurture Co</h4>
                 <p class="card-text">App for care takes and Givers</p>
                 <a href="nurture.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
 
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
@@ -259,24 +269,28 @@
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/cv.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="cvreview.html">
+              <img src="img/cv.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">AI Enbled CV Review</h4>
                 <p class="card-text">Resume Review Experience for Great Learning Career Services</p>
                 <a href="cvreview.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
             <span class="rect tr"></span>
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/glaide.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="glaide.html">
+              <img src="img/glaide.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">GLAIde </h4>
                 <p class="card-text">AI-Powered Doubt Clearing & Chapter Summarization</p>
                 <a href="glaide.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
 
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
@@ -284,24 +298,43 @@
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/visa.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="visa.html">
+              <img src="img/visa.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Visa Application </h4>
                 <p class="card-text">For document accuracy, and real-time visibility</p>
                 <a href="visa.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
             <span class="rect tr"></span>
             <span class="rect tl"></span>
             <span class="rect br"></span>
             <span class="rect bl"></span>
-            <img src="img/gla.png" class="card-img-top mb-3" alt="...">
+            <a class="card-link" href="gla.html">
+              <img src="img/gla.png" class="card-img-top mb-3" alt="...">
+                <div class="card-body">
+                  <h4 class="card-title pb-2 fw-semibold">Great Learning Academy's Mobile App</h4>
+                  <p class="card-text">Bridging Dreams to Careers</p>
+                  <a href="gla.html" class="btn btn-link">View more</a>
+                </div>
+            </a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-4 rects project p-3">
+            <span class="rect tr"></span>
+            <span class="rect tl"></span>
+            <span class="rect br"></span>
+            <span class="rect bl"></span>
+            <a class="card-link" href="glapro.html">
+              <img src="img/glapro.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
-                <h4 class="card-title pb-2 fw-semibold">Great Learning Academy's Mobile App</h4>
-                <p class="card-text">Bridging Dreams to Careers</p>
-                <a href="gla.html" class="btn btn-link">View more</a>
+                <h4 class="card-title pb-2 fw-semibold">Great Learning Academy Pro</h4>
+                <p class="card-text">AI-Powered Career Acceleration Platform</p>
+                <a href="glapro.html" class="btn btn-link">View more</a>
               </div>
+            </a>
           </div>
 
           
@@ -335,7 +368,42 @@
   <section class="container my-5">
     <h2 class="mb-4 display-6 fw-bold">Licenses & Certifications</h2>
     <div class="row row-cols-1 row-cols-md-2 g-0 certificates">
-  
+      <!-- Certification Card -->
+      <div class="col rects certificate">
+        <span class="rect tr"></span>
+        <span class="rect tl"></span>
+        <span class="rect br"></span>
+        <span class="rect bl"></span>
+        <div class=" h-100  p-3 d-flex flex-row align-items-start">
+          <img src="img/hfi.png" alt="IxDF Logo" width="48" class="me-3 mt-1">
+          <div class="flex-grow-1">
+            <h5 class="mb-1">Certified User Experience Analyst CXA</h5>
+            <p class="text-muted mb-1 small">Human Factors International HFI</p>
+            <!-- <p class="mb-1 small"><strong>Issued:</strong> Oct 2024</p>
+            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/c4aad99d-3f06-41a4-b526-957f8e55bf6c" class="btn btn-link" target="_blank">Credentials</a> -->
+            <!-- <p class="mb-1 small"><strong>Credential ID:</strong> —</p> -->
+          </div>
+        </div>
+      </div>
+
+      <!-- Certification Card -->
+      <div class="col rects certificate">
+        <span class="rect tr"></span>
+        <span class="rect tl"></span>
+        <span class="rect br"></span>
+        <span class="rect bl"></span>
+        <div class=" h-100  p-3 d-flex flex-row align-items-start">
+          <img src="img/w3c.png" alt="IxDF Logo" width="48" class="me-3 mt-1">
+          <div class="flex-grow-1">
+            <h5 class="mb-1">W3Cx: Introduction to Web Accessibility (WAI0.1x)</h5>
+            <p class="text-muted mb-1 small">World Wide Web Consortium (W3C) via edX</p>
+            <!-- <p class="mb-1 small"><strong>Issued:</strong> Oct 2024</p>
+            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/c4aad99d-3f06-41a4-b526-957f8e55bf6c" class="btn btn-link" target="_blank">Credentials</a> -->
+            <!-- <p class="mb-1 small"><strong>Credential ID:</strong> —</p> -->
+          </div>
+        </div>
+      </div>
+
       <!-- Certification Card -->
       <div class="col rects certificate">
         <span class="rect tr"></span>
