--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
           <div class="flex-grow-1">
             <h5 class="mb-1">W3Cx: Introduction to Web Accessibility (WAI0.1x)</h5>
             <p class="text-muted mb-1 small">World Wide Web Consortium (W3C) via edX</p>
-            <!-- <p class="mb-1 small"><strong>Issued:</strong> Oct 2024</p>
-            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/c4aad99d-3f06-41a4-b526-957f8e55bf6c" class="btn btn-link" target="_blank">Credentials</a> -->
-            <!-- <p class="mb-1 small"><strong>Credential ID:</strong> —</p> -->
+            <p class="mb-1 small"><strong>Issued:</strong> June 23, 2025</p>
+            <a href="https://courses.edx.org/certificates/863eebb93de44710ab86dae9c24e0619?_gl=1*zevanx*_gcl_au*MzYzMTA1NTUuMTc0OTQ4MzQ2NA..*_ga*MTE3NDcyOTc3Ny4xNzQ5NDgzNDYx*_ga_D3KS4KMDT0*czE3NTA2NTAxODkkbzkkZzEkdDE3NTA2NTU3OTQkajEkbDAkaDA." class="btn btn-link" target="_blank">Credentials</a> -->
+            <p class="mb-1 small"><strong>Credential ID: </strong>863eebb93de44710ab86dae9c24e0619 </p>
           </div>
         </div>
       </div>
