--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             <h5 class="mb-1">W3Cx: Introduction to Web Accessibility (WAI0.1x)</h5>
             <p class="text-muted mb-1 small">World Wide Web Consortium (W3C) via edX</p>
             <p class="mb-1 small"><strong>Issued:</strong> June 23, 2025</p>
-            <a href="https://courses.edx.org/certificates/863eebb93de44710ab86dae9c24e0619?_gl=1*zevanx*_gcl_au*MzYzMTA1NTUuMTc0OTQ4MzQ2NA..*_ga*MTE3NDcyOTc3Ny4xNzQ5NDgzNDYx*_ga_D3KS4KMDT0*czE3NTA2NTAxODkkbzkkZzEkdDE3NTA2NTU3OTQkajEkbDAkaDA." class="btn btn-link" target="_blank">Credentials</a> -->
+            <a href="https://courses.edx.org/certificates/863eebb93de44710ab86dae9c24e0619?_gl=1*zevanx*_gcl_au*MzYzMTA1NTUuMTc0OTQ4MzQ2NA..*_ga*MTE3NDcyOTc3Ny4xNzQ5NDgzNDYx*_ga_D3KS4KMDT0*czE3NTA2NTAxODkkbzkkZzEkdDE3NTA2NTU3OTQkajEkbDAkaDA." class="btn btn-link" target="_blank">Credentials</a> 
             <p class="mb-1 small"><strong>Credential ID: </strong>863eebb93de44710ab86dae9c24e0619 </p>
           </div>
         </div>
