--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -63,7 +63,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link icon-btn" href="mailto:ux.siva@gmail.com" title="Email">
+            <a class="nav-link icon-btn" href="mailto:ux.siva@gmail.com" target="_blank" title="ux.siva@gmail.com">
               <i class="ri-mail-send-line ri-lg"></i>
             </a>
           </li>
