--- a/jedi.html
+++ b/jedi.html
@@ -61,7 +61,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link icon-btn" href="mailto:ux.siva@gmail.com" title="ux.siva@gmail.com">
+            <a class="nav-link icon-btn" href="mailto:ux.siva@gmail.com" title="ux.siva@gmail.com" target="_blank">
               <i class="ri-mail-send-line ri-lg"></i>
             </a>
           </li>
