--- a/cvreview.html
+++ b/cvreview.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="favicon.svg" type="image/x-icon">
-  <title>B Sivarami Reddy – Product Designer & Design Leader</title>
+  <title>AI-Powered Resume Review – Scalable Career Support System - B Sivarami Reddy – Product Designer & Design Leader</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -60,7 +60,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link icon-btn" href="mailto:ux.siva@gmail.com" title="ux.siva@gmail.com">
+            <a class="nav-link icon-btn" href="mailto:ux.siva@gmail.com" title="ux.siva@gmail.com" target="_blank">
               <i class="ri-mail-send-line ri-lg"></i>
             </a>
           </li>
