--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
         <div class=" h-100  p-3 d-flex flex-row align-items-start">
           <img src="img/hfi.png" alt="IxDF Logo" width="48" class="me-3 mt-1">
           <div class="flex-grow-1">
-            <h5 class="mb-1">Certified User Experience Analyst CXA</h5>
+            <h5 class="mb-1">Certified User Experience Analyst (CXA™)</h5>
             <p class="text-muted mb-1 small">Human Factors International HFI</p>
-            <!-- <p class="mb-1 small"><strong>Issued:</strong> Oct 2024</p>
-            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/c4aad99d-3f06-41a4-b526-957f8e55bf6c" class="btn btn-link" target="_blank">Credentials</a> -->
-            <!-- <p class="mb-1 small"><strong>Credential ID:</strong> —</p> -->
+            <p class="mb-1 small"><strong>Issued:</strong> Jul 2025</p>
+            <a href="https://www.credly.com/badges/3da25665-79b2-4d14-9296-df2a510d634b/public_url" class="btn btn-link" target="_blank">Credentials</a> 
+            <p class="mb-1 small"><strong>Credential ID: 2025 - 759</strong> —</p> 
           </div>
         </div>
       </div>
