--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <p class="text-muted mb-1 small">Human Factors International HFI</p>
             <p class="mb-1 small"><strong>Issued:</strong> Jul 2025</p>
             <a href="https://www.credly.com/badges/3da25665-79b2-4d14-9296-df2a510d634b/public_url" class="btn btn-link" target="_blank">Credentials</a> 
-            <p class="mb-1 small"><strong>Credential ID: 2025 - 759</strong> —</p> 
+            <p class="mb-1 small"><strong>Credential ID: 2025 - 759</strong></p> 
           </div>
         </div>
       </div>
