--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="jedi.html">
-              <img src="img/jedi.png" class="card-img-top mb-3" alt="...">
+              <img src="img/jedi-1.png" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Jedi Dashboard </h4>
                 <p class="card-text"> Increasing Ops Efficiency through Product & Automation</p>
@@ -213,7 +213,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="olympus.html">
-              <img src="img/olympus.png" class="card-img-top mb-3" alt="...">
+              <img src="img/olympus-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Olympus LMS Enhancement</h4>
                 <p>Empowering Dreams, Accelerating Careers, and Cultivating Lifelong Learning Adventures!</p>
@@ -227,7 +227,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="shine.html">
-              <img src="img/shine.png" class="card-img-top mb-3" alt="...">
+              <img src="img/shine-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">GL Shine</h4>
                 <p class="card-text">Unifying Sales Efficiency and Compliance for Optimal Performance</p>
@@ -241,7 +241,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="tyre.html">
-              <img src="img/tyre.png" class="card-img-top mb-3" alt="...">
+              <img src="img/tyre-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Tyremarket</h4>
                 <p class="card-text">Experiemntal attempt to bring offline experience to online</p>
@@ -255,7 +255,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="nurture.html">
-              <img src="img/nurture.png" class="card-img-top mb-3" alt="...">
+              <img src="img/nurture-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Nurture Co</h4>
                 <p class="card-text">App for care takes and Givers</p>
@@ -270,7 +270,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="cvreview.html">
-              <img src="img/cv.png" class="card-img-top mb-3" alt="...">
+              <img src="img/cv-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">AI Enbled CV Review</h4>
                 <p class="card-text">Resume Review Experience for Great Learning Career Services</p>
@@ -284,7 +284,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="glaide.html">
-              <img src="img/glaide.png" class="card-img-top mb-3" alt="...">
+              <img src="img/glaide-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">GLAIde </h4>
                 <p class="card-text">AI-Powered Doubt Clearing & Chapter Summarization</p>
@@ -299,7 +299,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="visa.html">
-              <img src="img/visa.png" class="card-img-top mb-3" alt="...">
+              <img src="img/visa-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Visa Application </h4>
                 <p class="card-text">For document accuracy, and real-time visibility</p>
@@ -313,7 +313,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="gla.html">
-              <img src="img/gla.png" class="card-img-top mb-3" alt="...">
+              <img src="img/gla-1.jpg" class="card-img-top mb-3" alt="...">
                 <div class="card-body">
                   <h4 class="card-title pb-2 fw-semibold">Great Learning Academy's Mobile App</h4>
                   <p class="card-text">Bridging Dreams to Careers</p>
@@ -328,7 +328,7 @@
             <span class="rect br"></span>
             <span class="rect bl"></span>
             <a class="card-link" href="glapro.html">
-              <img src="img/glapro.png" class="card-img-top mb-3" alt="...">
+              <img src="img/glapro-1.jpg" class="card-img-top mb-3" alt="...">
               <div class="card-body">
                 <h4 class="card-title pb-2 fw-semibold">Great Learning Academy Pro</h4>
                 <p class="card-text">AI-Powered Career Acceleration Platform</p>
