--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                         
                         <!-- Project 4 -->
-                        <a href="#" class="group border border-gray-700 rounded-2xl overflow-hidden hover:border-gray-600 transition-all duration-300">
+                        <a href="Jedi.html" class="group border border-gray-700 rounded-2xl overflow-hidden hover:border-gray-600 transition-all duration-300">
                             <div class="h-44 overflow-hidden">
                                 <img src="img/jedi-2.jpg" alt="Great Learning Academy's Mobile App" class="w-full object-cover group-hover:scale-105 transition-transform duration-500" />
                             </div>
@@ -235,7 +235,7 @@
                         </a>
 
                         <!-- Project 2 -->
-                        <a href="#" class="group border border-gray-700 rounded-2xl overflow-hidden hover:border-gray-600 transition-all duration-300">
+                        <a href="shine.html" class="group border border-gray-700 rounded-2xl overflow-hidden hover:border-gray-600 transition-all duration-300">
                             <div class="h-44 overflow-hidden">
                                 <img src="img/shine-2.jpg" alt="GL Shine" class="w-full object-cover group-hover:scale-105 transition-transform duration-500" />
                             </div>
