--- a/Jedi.html
+++ b/Jedi.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Designing for Impact, Led by Empathy — Sivarami Reddy</title>
-    <title>Form Follows Function — The Portfolio of B. Sivarami Reddy</title>
-    <meta name="description" content="B. Sivarami Reddy is a UX Design Leader and Design Manager based in Bengaluru, India. He designs meaningful, user-focused digital experiences guided by the belief that form follows function." />
+    <title>Jedi Dashboard — Scaling Operational Efficiency through UX Strategy</title>
+    <meta name="description" content="A case study on how the Jedi Dashboard project transformed delivery operations. By automating workflows, centralizing learner context, and enhancing PM visibility, we achieved a 50% increase in Program Manager capacity, enabling teams to scale from 120 to 200 learners per PM." />
     <meta name="keywords" content="UX Designer, Design Manager, Portfolio, Product Design, User Experience, Bengaluru, Frontend Engineer, UI/UX, Figma, ReactJS" />
     <meta name="author" content="B. Sivarami Reddy" />
     <link rel="canonical" href="https://uxsiva.onrender.com/" />
