--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         </a>
 
                         <!-- Project 5 -->
-                        <a href="#" class="group border border-gray-700 rounded-2xl bg-gradient-to-br from-green-900/20 overflow-hidden to-green-400/10 hover:border-gray-600 transition-all duration-300">
+                        <a href="olympus.html" class="group border border-gray-700 rounded-2xl bg-gradient-to-br from-green-900/20 overflow-hidden to-green-400/10 hover:border-gray-600 transition-all duration-300">
                             <div class="h-44 overflow-hidden">
                                 <img src="img/olympus-2.jpg" alt="Great Learning Academy's Mobile App" class="w-full object-cover group-hover:scale-105 transition-transform duration-500" />
                             </div>
