--- a/shine.html
+++ b/shine.html
@@ -51,7 +51,7 @@
       <span class="text-sm font-medium tracking-wide uppercase">Back</span>
     </a>
     <span class="text-gray-500 px-1">/</span>
-    <h2 class="text-sm sm:text-base font-semibold text-white">Olympus LMS Case Study</h2>
+    <h2 class="text-sm sm:text-base font-semibold text-white">GL Shine Case Study</h2>
   </div>
 
   <!-- Right Section (Visible only on Desktop) -->
