--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
                     <!-- Grid Layout -->
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 auto-rows-[minmax(200px,auto)]">
                         <!-- Project 1: Large text-only block -->
-                        <a href="#" class="group border border-gray-700 rounded-2xl bg-gradient-to-br from-gray-900 to-gray-800 p-8 hover:border-gray-600 transition-all duration-300 md:row-span-2 flex flex-col justify-center">
+                        <a href="gla.html" class="group border border-gray-700 rounded-2xl bg-gradient-to-br from-gray-900 to-gray-800 p-8 hover:border-gray-600 transition-all duration-300 md:row-span-2 flex flex-col justify-center">
                             <img src="img/GLA-app-mock.png" alt="Great Learning Academy's Mobile App" class="w-full object-cover mb-4 rounded-lg group-hover:scale-105 transition-transform duration-500" />
                         <h3 class="text-2xl mb-3 group-hover:text-primary transition-colors">Great Learning Academy’s Mobile App</h3>
                         <p class="text-gray-400 text-sm leading-relaxed">Bridging Dreams to Careers along with Great Learning Academy Pro</p>
                         </a>
 
                         <!-- Project 3 -->
-                        <a href="#" class="group border border-gray-700 rounded-2xl overflow-hidden hover:border-gray-600 transition-all duration-300">
+                        <a href="cvreview.html" class="group border border-gray-700 rounded-2xl overflow-hidden hover:border-gray-600 transition-all duration-300">
                         <div class="h-44 overflow-hidden">
                             <img src="img/cv-1.jpg" alt="AI Enabled CV Review" class="w-full object-cover group-hover:scale-105 transition-transform duration-500" />
                         </div>
