--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                             </svg>
                             <span>HIRE ME!</span>
                         </button> -->
-                        <button class="w-full border border-primary text-primary py-2 rounded-full flex items-center justify-center gap-2 hover:bg-primary/10 transition-colors font-medium">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <a href="B Sivarami Reddy resume.pdf" download class="w-full border border-primary text-primary py-2 rounded-full flex items-center justify-center gap-2 hover:bg-primary/10 transition-colors font-medium" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                             <polyline points="7 10 12 15 17 10"/>
                             <line x1="12" y1="15" x2="12" y2="3"/>
-                            </svg>
-                            <span>DOWNLOAD CV</span>
-                        </button>
+                        </svg>
+                        <span>DOWNLOAD CV</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -146,8 +146,8 @@
                     </div> -->
             <div class="space-y-16">
                 <!-- Contact Form Section -->
-               <section class="lg:min-h-[50vh] lg:max-h-[65vh] flex flex-col justify-center max-w-4xl mx-auto  pt-24 pb-16">
-                    <h1 class="text-4xl lg:text-5xl font-semibold text-white leading-tight mb-6">
+               <section class=" flex flex-col justify-center max-w-4xl mx-auto mt-[80px] pb-3">
+                    <h1 class="text-4xl lg:text-5xl font-semibold text-white leading-tight mb-[48px]">
                         A <span class="text-primary">Designer</span> who specializes in UX and Interaction Design
                     </h1>
                     <p class="text-gray-400 text-lg mb-10">
@@ -173,8 +173,8 @@
                 </section>
                 
 
-                <section id="projects" class="py-16">
-                    <div class="mb-8">
+                <section id="projects" class="py-16 mt-[80px]">
+                    <div class="mb-4">
                         <button class="flex items-center gap-2 px-6 py-2 border border-gray-600 rounded-full text-white text-sm">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary">
                                 <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6l2 2h8a2 2 0 0 1 2 2z"/>
