--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 
 
                 <!-- Certifications Section -->
-                <section>
+                <!-- <section>
                     <div class="mt-8 mb-4">
                         <button class="flex items-center gap-2 px-6 py-2 border border-gray-600 rounded-full text-white text-sm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary">
@@ -401,7 +401,166 @@
                             <p class="text-sm text-gray-400">IxDF - Interaction Design Foundation</p>
                         </div>
                     </div>
-                </section>
+                </section> -->
+                
+                <section class="container mx-auto my-16 px-4">
+                    <!-- Header -->
+                    <div class="mt-8 mb-4">
+                        <button class="flex items-center gap-2 px-6 py-2 border border-gray-600 rounded-full text-white text-sm">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                        </svg>
+                        <span>CERTIFICATES</span>
+                        </button>
+                    </div>
+
+                    <div class="flex items-center gap-3 mb-8">
+                        <h2 class="text-4xl text-white font-semibold">Earned <span class="text-green-400">Credentials</span></h2>
+                    </div>
+
+                    <!-- Certificates List -->
+                    <div class="space-y-4">
+                        <!-- Certificate -->
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/hfi.png" alt="HFI Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Certified User Experience Analyst (CXA™)</h3>
+                            <p class="text-sm text-gray-400 mb-1">Human Factors International (HFI)</p>
+                            <p class="text-xs text-gray-500 mb-1">Jul 2025</p>
+                            <a href="https://www.credly.com/badges/3da25665-79b2-4d14-9296-df2a510d634b/public_url" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/w3c.png" alt="W3C Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">W3Cx: Introduction to Web Accessibility</h3>
+                            <p class="text-sm text-gray-400 mb-1">World Wide Web Consortium (W3C) via edX</p>
+                            <p class="text-xs text-gray-500 mb-1">June 23, 2025</p>
+                            <a href="https://courses.edx.org/certificates/863eebb93de44710ab86dae9c24e0619" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">How to Create Intuitive Products</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation</p>
+                            <p class="text-xs text-gray-500 mb-1">Oct 2024</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/c4aad99d-3f06-41a4-b526-957f8e55bf6c" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/UOA.jpeg" alt="UoA Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Qualitative Research Methods</h3>
+                            <p class="text-sm text-gray-400 mb-1">University of Amsterdam</p>
+                            <p class="text-xs text-gray-500 mb-1">Sep 2020</p>
+                            <a href="https://www.coursera.org/account/accomplishments/certificate/T48JCK6KRL55" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/UOA.jpeg" alt="UoA Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Quantitative Methods</h3>
+                            <p class="text-sm text-gray-400 mb-1">University of Amsterdam</p>
+                            <p class="text-xs text-gray-500 mb-1">Sep 2020</p>
+                            <a href="https://www.coursera.org/account/accomplishments/certificate/QTV4BNUU6V8M" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/wu.jpeg" alt="Wesleyan Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Social Psychology</h3>
+                            <p class="text-sm text-gray-400 mb-1">Wesleyan University</p>
+                            <p class="text-xs text-gray-500 mb-1">Sep 2020</p>
+                            <a href="https://www.coursera.org/account/accomplishments/certificate/F5ST39N3RZBE" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Human–Computer Interaction (HCI)</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <p class="text-xs text-gray-500 mb-1">Sep 2017</p>
+                            <a href="https://www.interaction-design.org/sivarami-reddy/certificate/course/NwgZFnPH7?r=sivarami-reddy" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">User Research — Methods & Best Practices</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <p class="text-xs text-gray-500 mb-1">Aug 2017</p>
+                            <a href="https://www.interaction-design.org/sivarami-reddy/certificate/course/Nrm0Dc4s4?r=sivarami-reddy" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">AI for Designers</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/46520d16-3ca8-4407-aaa4-354640344d3d" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Conducting Usability Testing</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/2b177cf6-1c04-4459-b92a-e855d0d4c6bd" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">Perception & Memory in HCI and UX</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/b977436e-10b2-435d-9835-b7d7eea884d1" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">The Brain and Technology: Brain Science in Interface Design</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/798a9903-0312-42ec-ae02-06854fb9f9ba" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">UI Design Patterns for Successful Software</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/42121cff-0a7d-4514-97e9-cd5c51627c1f" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+
+                        <div class="flex items-center gap-4 border border-gray-700 rounded-2xl p-5 hover:border-gray-500 transition-colors">
+                        <img src="img/idf.jpeg" alt="IxDF Logo" class="w-12 h-12 rounded-lg object-contain bg-white/10 p-1">
+                        <div>
+                            <h3 class="text-lg text-white mb-1 font-medium">UX Management: Strategy and Tactics</h3>
+                            <p class="text-sm text-gray-400 mb-1">Interaction Design Foundation (IxDF)</p>
+                            <a href="https://www.interaction-design.org/members/sivarami-reddy/certificate/course/PLk5Nz0lQ" target="_blank" class="text-green-400 text-xs underline hover:text-green-300">View Credential</a>
+                        </div>
+                        </div>
+                    </div>
+                    </section>
+
+
+
+
+
             </div>
         </div>
     </main>
@@ -412,5 +571,14 @@
       &copy; 2024 B. Sivarami Reddy. All rights reserved.
     </p>
   </footer>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WF03MQCYHW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WF03MQCYHW');
+</script>
 </body>
 </html>
