--- a/shine.html
+++ b/shine.html
@@ -343,5 +343,14 @@
       &copy; 2024 B. Sivarami Reddy. All rights reserved.
     </p>
   </footer>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WF03MQCYHW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WF03MQCYHW');
+</script>
 </body>
 </html>
