linkedin CV update

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </svg>
                             <span>HIRE ME!</span>
                         </button> -->
-                        <a href="B Sivarami Reddy resume.pdf" download class="w-full border border-primary text-primary py-2 rounded-full flex items-center justify-center gap-2 hover:bg-primary/10 transition-colors font-medium" target="_blank">
+                        <a href="Sivarami-Reddy-Resume.pdf" download class="w-full border border-primary text-primary py-2 rounded-full flex items-center justify-center gap-2 hover:bg-primary/10 transition-colors font-medium" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                             <polyline points="7 10 12 15 17 10"/>
